@@ -92,13 +92,14 @@ void register_setter(void (*func)(void*, struct question*),
              void *data, struct question *q, struct frontend *obj)
 {
     struct setter_struct *s;
+    struct frontend_data *fe_data = obj->data;
 
     s = malloc(sizeof(struct setter_struct));
     s->func = func;
     s->data = data;
     s->q = q;
-    s->next = ((struct frontend_data*)obj->data)->setters;
-    ((struct frontend_data*)obj->data)->setters = s;
+    s->next = fe_data->setters;
+    fe_data->setters = s;
 }
 
 void free_description_data( GtkObject *obj, struct frontend_question_data* data )
@@ -1273,6 +1274,7 @@ void set_design_elements(struct frontend *obj, GtkWidget *window)
     GtkWidget *label_title, *h_title_box, *v_title_box, *logo_button;
     GList *focus_chain = NULL;
     int *ret_val;
+    struct frontend_data *data = obj->data;
 
     /* A logo is displayed in the upper area of the screen */
     logo_button = gtk_image_new_from_file("/usr/share/graphics/logo_debian.png");
@@ -1281,7 +1283,7 @@ void set_design_elements(struct frontend *obj, GtkWidget *window)
     /* A label is used to display the fontend's title */
     label_title = gtk_label_new(NULL);
     gtk_misc_set_alignment (GTK_MISC (label_title), 0, 0);
-    ((struct frontend_data*) obj->data)->title = label_title;
+    data->title = label_title;
     h_title_box = gtk_hbox_new (TRUE, 0);
     gtk_box_pack_start(GTK_BOX (h_title_box), label_title, TRUE, TRUE, DEFAULT_PADDING);
     v_title_box = gtk_vbox_new (TRUE, 0);
@@ -1289,7 +1291,7 @@ void set_design_elements(struct frontend *obj, GtkWidget *window)
 
     /* This is the box were question(s) will be displayed */
     targetbox = gtk_vbox_new (FALSE, 0);
-    ((struct frontend_data*) obj->data)->target_box = targetbox;
+    data->target_box = targetbox;
 
     actionbox = gtk_hbutton_box_new();
     h_actionbox = gtk_hbox_new(FALSE, 0);
@@ -1301,7 +1303,7 @@ void set_design_elements(struct frontend *obj, GtkWidget *window)
     button_screenshot = gtk_button_new_with_label (get_text(obj, "debconf/gtk-button-screenshot", "Screenshot"));
     g_signal_connect (G_OBJECT (button_screenshot), "clicked", G_CALLBACK (screenshot_button_callback), obj );
     gtk_box_pack_start (GTK_BOX(actionbox), button_screenshot, TRUE, TRUE, DEFAULT_PADDING);
-    ((struct frontend_data*) obj->data)->button_screenshot = button_screenshot;
+    data->button_screenshot = button_screenshot;
     gtk_widget_set_sensitive (button_screenshot, FALSE);
 
     /* Here are the back and forward buttons */
@@ -1322,8 +1324,8 @@ void set_design_elements(struct frontend *obj, GtkWidget *window)
     gtk_box_pack_start (GTK_BOX(actionbox), button_next, TRUE, TRUE, DEFAULT_PADDING);
     GTK_WIDGET_SET_FLAGS (button_next, GTK_CAN_DEFAULT);
 
-    ((struct frontend_data*) obj->data)->button_prev = button_prev;
-    ((struct frontend_data*) obj->data)->button_next = button_next;
+    data->button_prev = button_prev;
+    data->button_next = button_next;
     gtk_widget_set_sensitive (button_prev, FALSE);
     gtk_widget_set_sensitive (button_next, FALSE);
 
@@ -1335,7 +1337,7 @@ void set_design_elements(struct frontend *obj, GtkWidget *window)
     g_signal_connect (G_OBJECT(button_cancel), "clicked",
                       G_CALLBACK(cancel_button_callback), obj);
     gtk_box_pack_start (GTK_BOX(actionbox), button_cancel, TRUE, TRUE, DEFAULT_PADDING);
-    ((struct frontend_data*) obj->data)->button_cancel = button_cancel;
+    data->button_cancel = button_cancel;
     gtk_widget_set_sensitive (button_cancel, FALSE);
 
     /* focus order inside actionbox */
@@ -1441,7 +1443,7 @@ static int gtk_initialize(struct frontend *obj, struct configuration *conf)
     gtk_window_set_decorated (GTK_WINDOW (window), TRUE);
     set_design_elements (obj, window);
     gtk_rc_reparse_all();
-    ((struct frontend_data*) obj->data)->window = window;
+    fe_data->window = window;
     gtk_widget_set_default_direction(get_text_direction(obj));
     gtk_widget_show_all(window);
 
