@@ -3,8 +3,12 @@ cdebconf (0.117) UNRELEASED; urgency=low
   [ Attilio Fiandrotti ]
   * gtk.c: remove some compatibility conditions that are no longer needed.
     Closes: #427657.
+  
+  [ Otavio Salvador ]
+  * Reduce the usage of casting to struct frontend_data on GTK frontend
+    code. Closes: #426745.
 
- -- Frans Pop <fjp@debian.org>  Wed, 13 Jun 2007 16:53:40 +0200
+ -- Otavio Salvador <otavio@debian.org>  Wed, 13 Jun 2007 14:04:55 -0300
 
 cdebconf (0.116) unstable; urgency=low
 
